work with 3ds for Google Pay

--- a/android/src/main/res/layout/activity_flutter_braintree_drop_in.xml
+++ b/android/src/main/res/layout/activity_flutter_braintree_drop_in.xml
@@ -5,8 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:alpha="0.0"
-    android:visibility="invisible"
+    android:visibility="visible"
     tools:context=".FlutterBraintreeCustom"
-    tools:visibility="invisible">
+    tools:visibility="visible">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
